Update latest version with improvements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1a5f3a 0%, #2d5a3d 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -28,7 +28,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+            background: linear-gradient(135deg, #1a5f3a 0%, #2d5a3d 100%);
             color: white;
             padding: 30px;
             text-align: center;
@@ -64,8 +64,8 @@
 
         .nav-tab.active {
             background: white;
-            color: #ff6b6b;
-            border-bottom: 3px solid #ff6b6b;
+            color: #1a5f3a;
+            border-bottom: 3px solid #1a5f3a;
         }
 
         .nav-tab:hover {
@@ -89,7 +89,7 @@
             color: #333;
             margin-bottom: 20px;
             padding-bottom: 10px;
-            border-bottom: 2px solid #ff6b6b;
+            border-bottom: 2px solid #1a5f3a;
             font-size: 1.5em;
         }
 
@@ -125,8 +125,8 @@
         .form-group select:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #ff6b6b;
-            box-shadow: 0 0 0 3px rgba(255, 107, 107, 0.1);
+            border-color: #1a5f3a;
+            box-shadow: 0 0 0 3px rgba(26, 95, 58, 0.1);
         }
 
         .form-group textarea {
@@ -146,12 +146,12 @@
         }
 
         .btn-primary {
-            background: #ff6b6b;
+            background: #1a5f3a;
             color: white;
         }
 
         .btn-primary:hover {
-            background: #ee5a24;
+            background: #2d5a3d;
             transform: translateY(-2px);
         }
 
@@ -557,7 +557,7 @@
 
         .security-modal input:focus {
             outline: none;
-            border-color: #ff6b6b;
+            border-color: #1a5f3a;
         }
 
         .security-toggle {
@@ -565,7 +565,7 @@
             top: 20px;
             right: 20px;
             z-index: 1000;
-            background: #ff6b6b;
+            background: #1a5f3a;
             color: white;
             border: none;
             padding: 10px 15px;
@@ -578,7 +578,7 @@
         }
 
         .security-toggle:hover {
-            background: #ee5a24;
+            background: #2d5a3d;
             transform: translateY(-2px);
         }
 
@@ -653,7 +653,7 @@
         }
 
         .modal-header {
-            background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+            background: linear-gradient(135deg, #1a5f3a 0%, #2d5a3d 100%);
             color: white;
             padding: 20px;
             display: flex;
@@ -740,7 +740,7 @@
 
         .prodotti-table input:focus {
             outline: none;
-            border-color: #ff6b6b;
+            border-color: #1a5f3a;
         }
 
         /* Stili per i totali */
@@ -782,8 +782,8 @@
         }
 
         .catalogo-tab.active {
-            color: #ff6b6b;
-            border-bottom: 3px solid #ff6b6b;
+            color: #1a5f3a;
+            border-bottom: 3px solid #1a5f3a;
         }
 
         .catalogo-tab:hover {
@@ -964,7 +964,7 @@
         <!-- Loading Indicator -->
         <div id="loadingIndicator" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 9999; display: flex; align-items: center; justify-content: center;">
             <div style="background: white; padding: 20px; border-radius: 10px; text-align: center;">
-                <div style="width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid #ff6b6b; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 10px;"></div>
+                <div style="width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid #1a5f3a; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 10px;"></div>
                 <p>Caricamento...</p>
             </div>
         </div>
@@ -2777,7 +2777,7 @@
                     <div style="text-align: center; border-bottom: 2px solid #333; padding-bottom: 20px; margin-bottom: 30px;">
                         <h1 style="margin: 0; color: #333;">Privilege Cafè&Wine</h1>
                         <p style="margin: 5px 0; color: #666;">C.so Vittorio Emanuele II, 48 Bitonto (Ba) 70032 - Tel: 0803740786</p>
-                        <h2 style="margin: 20px 0; color: #ff6b6b;">${documento.tipo.toUpperCase()} N. ${documento.numero}</h2>
+                        <h2 style="margin: 20px 0; color: #1a5f3a;">${documento.tipo.toUpperCase()} N. ${documento.numero}</h2>
                     </div>
                     
                     <div style="margin-bottom: 30px;">
@@ -3576,7 +3576,7 @@
                     <div style="text-align: center; border-bottom: 2px solid #333; padding-bottom: 20px; margin-bottom: 30px;">
                         <h1 style="margin: 0; color: #333;">Privilege Cafè&Wine</h1>
                         <p style="margin: 5px 0; color: #666;">C.so Vittorio Emanuele II, 48 Bitonto (Ba) 70032 - Tel: 0803740786</p>
-                        <h2 style="margin: 20px 0; color: #ff6b6b;">${tipo.toUpperCase()} N. ${numero}</h2>
+                        <h2 style="margin: 20px 0; color: #1a5f3a;">${tipo.toUpperCase()} N. ${numero}</h2>
                     </div>
                     
                     <div style="margin-bottom: 30px;">
