Fix: Aggiunto async a updateDocumento per risolvere errore SyntaxError alla riga 5669

--- a/index.html
+++ b/index.html
@@ -5640,7 +5640,7 @@
             };
         }
 
-        function updateDocumento(id) {
+        async function updateDocumento(id) {
             const formData = new FormData(document.getElementById('fatturaFormModal'));
             
             if (righeProdotto.length === 0) {
