Fix: Corretta validazione clienti per accettare sia privati che aziendali
- Modificata validazione per accettare clienti privati (nome + cognome)
- Modificata validazione per accettare clienti aziendali (nomeAzienda)
- Risolto errore 'tutti i record sono stati filtrati' nella sincronizzazione GitHub

--- a/index.html
+++ b/index.html
@@ -5239,8 +5239,10 @@
                         return arr.filter(item => 
                             item && 
                             typeof item === 'object' && 
-                            item.nome && 
-                            item.cognome
+                            (
+                                (item.nome && item.cognome) || // Cliente privato
+                                (item.nomeAzienda) // Cliente aziendale
+                            )
                         );
                     },
                     documenti: (arr) => {
